--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -32,6 +32,9 @@
               matInput
               [matDatepicker]="receivedDatePicker"
               formControlName="recdDate"
+              (dateChange)="
+                appSharedService.formatDate($event, form.controls['recdDate'])
+              "
             />
             <mat-hint>DD/MM/YYYY</mat-hint>
             <mat-datepicker-toggle
@@ -54,6 +57,9 @@
               matInput
               [matDatepicker]="dcDatePicker"
               formControlName="dcDate"
+              (dateChange)="
+                appSharedService.formatDate($event, form.controls['dcDate'])
+              "
             />
             <mat-hint>DD/MM/YYYY</mat-hint>
             <mat-datepicker-toggle
