Added party and fibre list

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -13,7 +13,7 @@
       id="purchases"
       mat-button
       (click)="selectSection('purchases')"
-      routerLink="/purchases"
+      routerLink="/purchases/fibre"
     >
       Purchases
     </button>
@@ -32,6 +32,14 @@
       routerLink="/"
     >
       Sales
+    </button>
+    <button
+      id="party"
+      mat-button
+      (click)="selectSection('party')"
+      routerLink="/party"
+    >
+      Party
     </button>
   </div>
   <span class="toolbar-item-spacer"></span>
