--- a/src/app/components/party/add-party/add-party.component.scss
+++ b/src/app/components/party/add-party/add-party.component.scss
@@ -12,7 +12,7 @@ mat-card {
 }
 
 .padding {
-  padding: 32px 16px 16px 16px;
+  padding: 32px 24px 16px 24px;
 }
 
 .flex-wrap {
@@ -33,9 +33,9 @@ mat-card {
 }
 
 .footer {
+  margin-top: 50px;
   display: flex;
-  justify-content: flex-end;
-  gap: 16px;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 800px) {
