--- a/src/app/components/party/party-list/party-list.component.scss
+++ b/src/app/components/party/party-list/party-list.component.scss
@@ -30,3 +30,9 @@
 mat-expansion-panel-header {
   padding: 4px 24px;
 }
+
+.no-party {
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+}
