--- a/src/app/components/party/party-list/party-list.component.html
+++ b/src/app/components/party/party-list/party-list.component.html
@@ -56,8 +56,8 @@
               </div>
             </div>
             <div>
-              <label for="gstno">GST No</label>
-              <div id="gstno" class="text-gray">{{ party.gstno || "_" }}</div>
+              <label for="gstNo">GST No</label>
+              <div id="gstNo" class="text-gray">{{ party.gstNo || "_" }}</div>
             </div>
             <div>
               <label for="address1">Address 1</label>
@@ -108,7 +108,7 @@
             <div>
               <label for="email">Email</label>
               <div id="email" class="text-gray">
-                {{ party.emailId || "_" }}
+                {{ party.eMailId || "_" }}
               </div>
             </div>
             <div>
