added error handle for fibre chart

--- a/src/app/components/party/party-list/party-list.component.html
+++ b/src/app/components/party/party-list/party-list.component.html
@@ -114,7 +114,7 @@
             <div>
               <label for="phone">Phone</label>
               <div id="phone" class="text-gray">
-                {{ party.contactNo || "_" }}
+                {{ getContactNo(party.contactNo) }}
               </div>
             </div>
           </div>
