--- a/src/app/components/party/party-list/party-list.component.html
+++ b/src/app/components/party/party-list/party-list.component.html
@@ -42,7 +42,7 @@
           <mat-icon>delete</mat-icon> Remove
         </button>
       </div>
-      <mat-card class="card">
+      <mat-card class="card mb-16">
         <div class="party-details">
           <div class="section">
             <div>
