Added print button in search

--- a/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
+++ b/src/app/components/purchases/fibre/fibre-search/fibre-search.component.html
@@ -167,6 +167,9 @@
               <button mat-raised-button class="ml-16" (click)="updatePO()">
                 <mat-icon>edit</mat-icon>Update PO
               </button>
+              <button mat-raised-button class="ml-16" color="accent">
+                <mat-icon>print</mat-icon>Print PO
+              </button>
             </div>
             <div class="w-100 element-detail">
               <table
