--- a/src/app/components/party/party-list/party-list.component.scss
+++ b/src/app/components/party/party-list/party-list.component.scss
@@ -12,12 +12,17 @@
 }
 
 .card {
-  padding: 32px 40px;
+  padding: 24px 40px;
+  border: 1px solid rgb(0, 0, 0, 0.1);
+  border-radius: 5px;
+  margin-bottom: 8px;
+  background-color: rgba(232, 232, 232, 0.15);
 }
 
 .party-details {
-  display: flex;
-  gap: 5%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 32px;
 }
 
 .section {
