--- a/src/app/components/purchases/fibre/fibre-list/fibre-list.component.html
+++ b/src/app/components/purchases/fibre/fibre-list/fibre-list.component.html
@@ -34,6 +34,7 @@
           <button
             mat-icon-button
             (click)="removeData(element)"
+            color="warn"
             matTooltip="Remove"
             aria-label="button with a delete icon"
           >
