--- a/src/app/components/error-dialog/error-dialog.component.html
+++ b/src/app/components/error-dialog/error-dialog.component.html
@@ -1,12 +1,14 @@
 <section class="banner">
-    <div class="banner-header">
-      <button mat-icon-button class="close-button" (click)="close()">
-        <mat-icon>close</mat-icon>
-      </button>
-      <div class="error-img"></div>
+  <div class="banner-header">
+    <button mat-icon-button class="close-button" (click)="close()">
+      <mat-icon>close</mat-icon>
+    </button>
+    <div class="error-img"></div>
+  </div>
+  <div class="banner-content">
+    <div class="font-size-28 letter-spacing-1">Error!</div>
+    <div class="font-size-16">
+      {{ message || "Something went wrong. Please try again." }}
     </div>
-    <div class="banner-content">
-      <div class="font-size-28 letter-spacing-1">Error!</div>
-      <div class="font-size-16">{{ message || 'Something went wrong. Please try again.' }}</div>
-    </div>
+  </div>
 </section>
