--- a/src/app/components/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.scss
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.scss
@@ -1,58 +1,70 @@
 .print {
-    padding: 32px 16px;
+  padding: 32px 16px;
 
-    #header {
+  #header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 50px;
+  }
+
+  #po-details {
+    #po {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 40px;
+    }
+    #party-details {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  .font-weight-bold {
+    font-weight: bold;
+  }
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 40px;
+  }
+
+  td,
+  th {
+    border: 1.5px solid #555454;
+    text-align: left;
+    padding: 8px;
+  }
+
+  .summary {
+    margin-top: 32px;
+    display: flex;
+    justify-content: flex-end;
+
+    & > div {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      width: 30%;
+      padding: 16px;
+      border: 1px solid #555454;
+
+      & > div {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        font-weight: bold;
-        font-size: 18px;
-        margin-bottom: 50px;
+        justify-content: space-between;
+      }
     }
+  }
 
-    #po-details {
-        #po {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 40px;
-        }
-        #party-details {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-        }
-    }
-
-    .font-weight-bold {
-        font-weight: bold;
-    }
-
-    table {
-        border-collapse: collapse;
-        width: 100%;
-        margin-top: 40px;
-      }
-      
-      td, th {
-        border: 1.5px solid #555454;
-        text-align: left;
-        padding: 8px;
-      }
-
-      tfoot td {
-        padding-top: 16px;
-        border: none;
-      }
-
-      tfoot, tfoot td:not(:empty) {
-        border: 1.5px solid #555454;
-      }
-
-      #footer {
-        margin-top:40px;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-      }
+  #footer {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
 }
