--- a/src/app/components/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.scss
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.scss
@@ -50,13 +50,13 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
-      width: 30%;
       padding: 16px;
       border: 1px solid #555454;
 
       & > div {
         display: flex;
         justify-content: space-between;
+        gap: 32px;
       }
     }
   }
