production section changes

--- a/src/app/components/purchases/fibre/fibre-master/fibre-list/fibre-list.component.html
+++ b/src/app/components/purchases/fibre/fibre-master/fibre-list/fibre-list.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <h1 class="font-weight-bold">Fibre List</h1>
+  <h1 class="font-weight-bold">Fibre Type List</h1>
   <div class="add-btn">
     <button
       aria-label="button with a add icon"
