--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -21,7 +21,7 @@
       id="production"
       mat-button
       (click)="selectSection('production')"
-      routerLink="/"
+      routerLink="/production"
     >
       Production
     </button>
