--- a/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
+++ b/src/app/components/purchases/fibre/fibre-dashboard/fibre-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="header">Monthly Purchase orders</h1>
   <div class="chart-container">
-    <canvas id="MyChart">{{ chart }}</canvas>
+    <canvas id="poChart">{{ chart }}</canvas>
   </div>
 </div>
