--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -2,7 +2,7 @@
   <div class="header-container">
     <h1 class="header">Receive Fibre Purchase Order</h1>
     <button mat-raised-button color="primary" (click)="choosePending()">
-      Choose from pending
+      Choose from Pending
     </button>
   </div>
   <mat-card class="party-card">
