--- a/src/app/components/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.html
@@ -63,7 +63,7 @@
         >
           <tr>
             <td>{{ order?.fibreType }}</td>
-            <td>{{ order?.shade }}</td>
+            <td>{{ order?.shadeName }}</td>
             <td class="text-right">{{ order?.weight | number }}</td>
             <td class="text-right">{{ order?.rate | currency : "INR" }}</td>
             <td class="text-right">
