--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/receive-order-details/receive-order-details.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/receive-order-details/receive-order-details.component.html
@@ -17,7 +17,7 @@
       <div class="w-100 pl-16">
         <label for="shade" class="font-size-14 text-dark">Shade</label>
         <div id="shade" class="text-gray">
-          {{ form.get("shade")?.value }}
+          {{ form.get("shadeName")?.value }}
         </div>
       </div>
     </div>
