--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -65,7 +65,7 @@
 
     <ng-container matColumnDef="shade">
       <th mat-header-cell *matHeaderCellDef>Shade</th>
-      <td mat-cell *matCellDef="let element">{{ element.shade }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
