--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -89,7 +89,7 @@
 
     <ng-container matColumnDef="shade">
       <th mat-header-cell *matHeaderCellDef>Shade</th>
-      <td mat-cell *matCellDef="let element">{{ element.shade }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
       <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
