--- a/src/app/components/purchases/fibre/fibre-receive-purchase-order/pending-fibre-po/pending-fibre-po.component.html
+++ b/src/app/components/purchases/fibre/fibre-receive-purchase-order/pending-fibre-po/pending-fibre-po.component.html
@@ -9,6 +9,9 @@
         }}</mat-option>
       </ng-container>
     </mat-select>
+    <mat-hint *ngIf="!partiesWithPendingPO.length"
+      ><strong>There is no pending PO</strong></mat-hint
+    >
     <mat-error>This field is required.</mat-error>
   </mat-form-field>
 
@@ -29,7 +32,7 @@
 
     <ng-container matColumnDef="shade">
       <th mat-header-cell *matHeaderCellDef>Shade</th>
-      <td mat-cell *matCellDef="let element">{{ element.shade }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
     </ng-container>
 
     <ng-container matColumnDef="orderQty">
