commented forgot password link

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -37,9 +37,9 @@
         <button mat-raised-button color="primary" (click)="submit()">
           Login
         </button>
-        <button mat-button color="primary" (click)="forgotPassword()">
+        <!-- <button mat-button color="primary" (click)="forgotPassword()">
           <span class="font-size-14">Forgot password?</span>
-        </button>
+        </button> -->
       </form>
     </div>
     <div class="right"></div>
